--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=Afhef5VLQwH0ehEcP09WXxsrJ6XF4L4oK_YK1uqrrEsoJ2nOBeg3g4bmsXp7y6YMAT1qAoWfOsPn-aRK">
+    </script>
+
 
 </head>
 
