--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 <body>
   <app-root></app-root>
 </body>
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>  
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
   integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
